// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";
package openpitrix;

// set go package name to pb
option go_package = "pb";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

message DescribeSubnetsRequest {
	google.protobuf.StringValue runtime_id = 1;
	uint32 limit = 2;
	uint32 offset = 3;
	google.protobuf.UInt32Value subnet_type = 4;
	repeated string subnet_id = 5;
	repeated string advanced_param = 6;
}

message Subnet {
	google.protobuf.StringValue subnet_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.Timestamp create_time = 3;
	google.protobuf.StringValue description = 4;
	repeated string instance_id = 5;
	google.protobuf.StringValue vpc_id = 6;
	google.protobuf.UInt32Value subnet_type = 7;
}

message DescribeSubnetsResponse {
	uint32 total_count = 1;
	repeated Subnet subnet_set = 2;
}

message CreateClusterRequest {
	google.protobuf.StringValue app_id = 1;
	google.protobuf.StringValue version_id = 2;
	google.protobuf.StringValue runtime_id = 3;
	google.protobuf.StringValue conf = 4;
	repeated string advanced_param = 5;
}

message CreateClusterResponse {
	google.protobuf.StringValue cluster_id = 1;
	google.protobuf.StringValue job_id = 2;
}

message ModifyClusterRequest {
	Cluster cluster = 1;
	repeated ClusterNode cluster_node_set = 2;
	repeated ClusterRole cluster_role_set = 3;
	repeated ClusterLink cluster_link_set = 4;
	repeated ClusterCommon cluster_common_set = 5;
	repeated ClusterLoadbalancer cluster_loadbalancer_set = 6;
}

message ModifyClusterResponse {
	google.protobuf.StringValue cluster_id = 1;
}

message ModifyClusterNodeRequest {
	ClusterNode cluster_node = 1;
}

message ModifyClusterNodeResponse {
	google.protobuf.StringValue node_id = 1;
}

message AddTableClusterNodesRequest {
	repeated ClusterNode cluster_node_set = 1;
}

message DeleteTableClusterNodesRequest {
	repeated string node_id = 1;
}

message DeleteClustersRequest {
	repeated string cluster_id = 1;
	repeated string advanced_param = 2;
}

message DeleteClustersResponse {
	repeated string cluster_id = 1;
	repeated string job_id = 2;
}

message UpgradeClusterRequest {
	google.protobuf.StringValue cluster_id = 1;
	google.protobuf.StringValue version_id = 2;
	repeated string advanced_param = 3;
}

message UpgradeClusterResponse {
	google.protobuf.StringValue cluster_id = 1;
	google.protobuf.StringValue job_id = 2;
}

message RollbackClusterRequest {
	google.protobuf.StringValue cluster_id = 1;
	repeated string advanced_param = 2;
}

message RollbackClusterResponse {
	google.protobuf.StringValue cluster_id = 1;
	google.protobuf.StringValue job_id = 2;
}

message ResizeClusterRequest {
	google.protobuf.StringValue cluster_id = 1;
	google.protobuf.StringValue role = 2;
	google.protobuf.UInt32Value cpu = 3;
	google.protobuf.UInt32Value memory = 4;
	repeated string advanced_param = 5;
}

message ResizeClusterResponse {
	google.protobuf.StringValue cluster_id = 1;
	google.protobuf.StringValue job_id = 2;
}

message AddClusterNodesRequest {
	google.protobuf.StringValue cluster_id = 1;
	google.protobuf.StringValue role = 2;
	google.protobuf.UInt32Value node_count = 3;
	repeated string advanced_param = 4;
}

message AddClusterNodesResponse {
	google.protobuf.StringValue cluster_id = 1;
	google.protobuf.StringValue job_id = 2;
}

message DeleteClusterNodesRequest {
	google.protobuf.StringValue cluster_id = 1;
	google.protobuf.StringValue role = 2;
	repeated string node_id = 3;
	repeated string advanced_param = 4;
}

message DeleteClusterNodesResponse {
	google.protobuf.StringValue cluster_id = 1;
	google.protobuf.StringValue job_id = 2;
}

message UpdateClusterEnvRequest {
	google.protobuf.StringValue cluster_id = 1;
	google.protobuf.StringValue env = 2;
	repeated string advanced_param = 3;
}

message UpdateClusterEnvResponse {
	google.protobuf.StringValue cluster_id = 1;
	google.protobuf.StringValue job_id = 2;
}

message ClusterCommon {
	google.protobuf.StringValue cluster_id = 1;
	google.protobuf.StringValue role = 2;
	google.protobuf.UInt32Value server_id_upper_bound = 3;
	google.protobuf.StringValue advanced_actions = 4;
	google.protobuf.StringValue init_service = 5;
	google.protobuf.StringValue start_service = 6;
	google.protobuf.StringValue stop_service = 7;
	google.protobuf.StringValue scale_out_service = 8;
	google.protobuf.StringValue scale_in_service = 9;
	google.protobuf.StringValue restart_service = 10;
	google.protobuf.StringValue destroy_service = 11;
	google.protobuf.StringValue upgrade_service = 12;
	google.protobuf.StringValue custom_service = 13;
	google.protobuf.StringValue backup_service = 14;
	google.protobuf.StringValue restore_service = 15;
	google.protobuf.StringValue delete_snapshot_service = 16;
	google.protobuf.StringValue health_check = 17;
	google.protobuf.StringValue monitor = 18;
	google.protobuf.StringValue passphraseless = 19;
	google.protobuf.StringValue vertical_scaling_policy = 20;
	google.protobuf.BoolValue agent_installed = 21;
	google.protobuf.StringValue custom_metadata_script = 22;
	google.protobuf.StringValue image_id = 23;
	google.protobuf.StringValue backup_policy = 24;
	google.protobuf.BoolValue incremental_backup_supported = 25;
	google.protobuf.StringValue hypervisor = 26;
}

message ClusterNode {
	google.protobuf.StringValue node_id = 1;
	google.protobuf.StringValue cluster_id = 2;
	google.protobuf.StringValue name = 3;
	google.protobuf.StringValue instance_id = 4;
	google.protobuf.StringValue volume_id = 5;
	google.protobuf.StringValue device = 6;
	google.protobuf.StringValue subnet_id = 7;
	google.protobuf.StringValue private_ip = 8;
	google.protobuf.UInt32Value server_id = 9;
	google.protobuf.StringValue role = 10;
	google.protobuf.StringValue status = 11;
	google.protobuf.StringValue transition_status = 12;
	google.protobuf.UInt32Value group_id = 13;
	google.protobuf.StringValue owner = 14;
	google.protobuf.UInt32Value global_server_id = 15;
	google.protobuf.StringValue custom_metadata = 16;
	google.protobuf.StringValue pub_key = 17;
	google.protobuf.StringValue health_status = 18;
	google.protobuf.BoolValue is_backup = 19;
	google.protobuf.BoolValue auto_backup = 20;
	google.protobuf.Timestamp create_time = 21;
	google.protobuf.Timestamp status_time = 22;
	ClusterRole cluster_role = 23;
	ClusterCommon cluster_common = 24;
}

message ClusterRole {
	google.protobuf.StringValue cluster_id = 1;
	google.protobuf.StringValue role = 2;
	google.protobuf.UInt32Value cpu = 3;
	google.protobuf.UInt32Value gpu = 4;
	google.protobuf.UInt32Value memory = 5;
	google.protobuf.UInt32Value instance_size = 6;
	google.protobuf.UInt32Value storage_size = 7;
	google.protobuf.StringValue mount_point = 8;
	google.protobuf.StringValue mount_options = 9;
	google.protobuf.StringValue file_system = 10;
	google.protobuf.StringValue env = 11;
}

message ClusterLoadbalancer {
	google.protobuf.StringValue cluster_id = 1;
	google.protobuf.StringValue role = 2;
	google.protobuf.StringValue loadbalancer_listener_id = 3;
	google.protobuf.UInt32Value loadbalancer_port = 4;
	google.protobuf.StringValue loadbalancer_policy_id = 5;
}

message ClusterLink {
	google.protobuf.StringValue cluster_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue external_cluster_id = 3;
	google.protobuf.StringValue owner = 4;
}

message Cluster {
	google.protobuf.StringValue cluster_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
	google.protobuf.StringValue app_id = 4;
	google.protobuf.StringValue version_id = 5;
	google.protobuf.StringValue subnet_id = 6;
	google.protobuf.StringValue vpc_id = 7;
	google.protobuf.StringValue frontgate_id = 8;
	google.protobuf.UInt32Value cluster_type = 9;
	google.protobuf.StringValue endpoints = 10;
	google.protobuf.StringValue status = 11;
	google.protobuf.StringValue transition_status = 12;
	google.protobuf.BoolValue metadata_root_access = 13;
	google.protobuf.StringValue owner = 14;
	google.protobuf.StringValue global_uuid = 15;
	google.protobuf.StringValue upgrade_status = 16;
	google.protobuf.Timestamp upgrade_time = 17;
	google.protobuf.StringValue runtime_id = 18;
	google.protobuf.Timestamp create_time = 19;
	google.protobuf.Timestamp status_time = 20;
	repeated ClusterNode cluster_node_set = 21;
	repeated ClusterRole cluster_role_set = 22;
	repeated ClusterLink cluster_link_set = 23;
	repeated ClusterCommon cluster_common_set = 24;
	repeated ClusterLoadbalancer cluster_loadbalancer_set = 25;
}

message DescribeClustersRequest {
	repeated string cluster_id = 1;
	repeated string app_id = 2;
	repeated string version_id = 3;
	repeated string status = 4;
	repeated string runtime_id = 5;
	repeated string frontgate_id = 6;
	google.protobuf.StringValue external_cluster_id = 7;
	// default is 20, max value is 200
	uint32 limit = 8;
	// default is 0
	uint32 offset = 9;
	google.protobuf.StringValue search_word = 10;
}
message DescribeClustersResponse {
	uint32 total_count = 1;
	repeated Cluster cluster_set = 2;
	uint32 runtime_count = 3;
	uint32 last_two_week_count = 4;
}

message DescribeClusterNodesRequest {
	google.protobuf.StringValue cluster_id = 1;
	repeated string node_id = 2;
	repeated string status = 3;
	// default is 20, max value is 200
	uint32 limit = 4;
	// default is 0
	uint32 offset = 5;
	google.protobuf.StringValue search_word = 6;
}
message DescribeClusterNodesResponse {
	uint32 total_count = 1;
	repeated ClusterNode cluster_node_set = 2;
}

message StopClustersRequest {
	repeated string cluster_id = 1;
	repeated string advanced_param = 2;
}

message StopClustersResponse {
	repeated string cluster_id = 1;
	repeated string job_id = 2;
}

message StartClustersRequest {
	repeated string cluster_id = 1;
	repeated string advanced_param = 2;
}

message StartClustersResponse {
	repeated string cluster_id = 1;
	repeated string job_id = 2;
}

message RecoverClustersRequest {
	repeated string cluster_id = 1;
	repeated string advanced_param = 2;
}

message RecoverClustersResponse {
	repeated string cluster_id = 1;
	repeated string job_id = 2;
}

message CeaseClustersRequest {
	repeated string cluster_id = 1;
	repeated string advanced_param = 2;
}

message CeaseClustersResponse {
	repeated string cluster_id = 1;
	repeated string job_id = 2;
}

service ClusterManager {
	rpc DescribeSubnets (DescribeSubnetsRequest) returns (DescribeSubnetsResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "describe subnets"
		};
		option (google.api.http) = {
			get: "/v1/clusters/subnets"
		};
	}
	rpc CreateCluster (CreateClusterRequest) returns (CreateClusterResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "create cluster"
		};
		option (google.api.http) = {
			post: "/v1/clusters/create"
			body: "*"
		};
	}
	rpc ModifyCluster (ModifyClusterRequest) returns (ModifyClusterResponse);
	rpc ModifyClusterNode (ModifyClusterNodeRequest) returns (ModifyClusterNodeResponse);
	rpc AddTableClusterNodes (AddTableClusterNodesRequest) returns (google.protobuf.Empty);
	rpc DeleteTableClusterNodes (DeleteTableClusterNodesRequest) returns (google.protobuf.Empty);
	rpc DeleteClusters (DeleteClustersRequest) returns (DeleteClustersResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "delete clusters"
		};
		option (google.api.http) = {
			post: "/v1/clusters/delete"
			body: "*"
		};
	}
	rpc UpgradeCluster (UpgradeClusterRequest) returns (UpgradeClusterResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "upgrade cluster"
		};
		option (google.api.http) = {
			post: "/v1/clusters/upgrade"
			body: "*"
		};
	}
	rpc RollbackCluster (RollbackClusterRequest) returns (RollbackClusterResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "rollback cluster"
		};
		option (google.api.http) = {
			post: "/v1/clusters/rollback"
			body: "*"
		};
	}
	rpc ResizeCluster (ResizeClusterRequest) returns (ResizeClusterResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "resize cluster"
		};
		option (google.api.http) = {
			post: "/v1/clusters/resize"
			body: "*"
		};
	}
	rpc AddClusterNodes (AddClusterNodesRequest) returns (AddClusterNodesResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "add cluster nodes"
		};
		option (google.api.http) = {
			post: "/v1/clusters/add_nodes"
			body: "*"
		};
	}
	rpc DeleteClusterNodes (DeleteClusterNodesRequest) returns (DeleteClusterNodesResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "delete cluster nodes"
		};
		option (google.api.http) = {
			post: "/v1/clusters/delete_nodes"
			body: "*"
		};
	}
	rpc UpdateClusterEnv (UpdateClusterEnvRequest) returns (UpdateClusterEnvResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "update cluster env"
		};
		option (google.api.http) = {
			patch: "/v1/clusters/update_env"
			body: "*"
		};
	}
	rpc DescribeClusters (DescribeClustersRequest) returns (DescribeClustersResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "describe clusters"
		};
		option (google.api.http) = {
			get: "/v1/clusters"
		};
	}
	rpc DescribeClusterNodes (DescribeClusterNodesRequest) returns (DescribeClusterNodesResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "describe cluster nodes"
		};
		option (google.api.http) = {
			get: "/v1/clusters/nodes"
		};
	}
	rpc StopClusters (StopClustersRequest) returns (StopClustersResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "stop clusters"
		};
		option (google.api.http) = {
			post: "/v1/clusters/stop"
			body: "*"
		};
	}
	rpc StartClusters (StartClustersRequest) returns (StartClustersResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "start clusters"
		};
		option (google.api.http) = {
			post: "/v1/clusters/start"
			body: "*"
		};
	}
	rpc RecoverClusters (RecoverClustersRequest) returns (RecoverClustersResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "recover clusters"
		};
		option (google.api.http) = {
			post: "/v1/clusters/recover"
			body: "*"
		};
	}
	rpc CeaseClusters (CeaseClustersRequest) returns (CeaseClustersResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "cease clusters"
		};
		option (google.api.http) = {
			post: "/v1/clusters/cease"
			body: "*"
		};
	}
}
